--- a/Application/Admin/View/common/menu.html
+++ b/Application/Admin/View/common/menu.html
@@ -18,7 +18,7 @@
         <span>网站设置</span>
       </a>
       <ul>
-        <li><a href="__MODULE__/Setting/index">网站设置</a></li>
+        <li><a href="__MODULE__/Setting">网站设置</a></li>
         <li><a href="">系统设置</a></li>
       </ul>
     </li>
